// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInputFieldV2 should render correctly 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-snr60n-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-snr60n-Container:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-snr60n-Container[data-success='true'] {
  border-color: #22674e;
}

.cache-snr60n-Container[data-error='true'] {
  border-color: #b3144d;
}

.cache-snr60n-Container:hover {
  border-color: #792dd4;
}

.cache-snr60n-Container[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
  cursor: not-allowed;
}

.cache-snr60n-Container[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1mc02x-Stack-SideContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 2px 8px;
}

.cache-1mc02x-Stack-SideContainer[data-size='small'] {
  height: 30px;
}

.cache-1mc02x-Stack-SideContainer[data-size='medium'] {
  height: 38px;
}

.cache-1mc02x-Stack-SideContainer[data-size='large'] {
  height: 46px;
  padding: 4px 8px;
}

.cache-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1xcp86l-StyledGhostButton:hover,
.cache-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-19zw6op-StyledRow-InputContainer {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-width: 0 1px 0 1px;
  border-style: solid;
  border-color: inherit;
  background: inherit;
  width: 100%;
}

.cache-gsc0y8-Input {
  outline: none;
  border: none;
  padding: 0;
  width: 100%;
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: Regular;
  line-height: 24px;
  text-align: center;
  padding: 8px;
  background: none;
}

.cache-gsc0y8-Input[data-has-unit='true'] {
  text-align: left;
  padding: 8px 0 8px 8px;
}

.cache-gsc0y8-Input::-webkit-outer-spin-button,
.cache-gsc0y8-Input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-gsc0y8-Input {
  -moz-appearance: textfield;
}

.cache-gsc0y8-Input[data-size='small'] {
  height: 30px;
}

.cache-gsc0y8-Input[data-size='medium'] {
  height: 38px;
}

.cache-gsc0y8-Input[data-size='large'] {
  height: 46px;
}

.cache-gsc0y8-Input:-moz-read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.cache-gsc0y8-Input:read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.cache-gsc0y8-Input:-moz-read-only~.e1vf1uzt2 {
  background: #f9f9fa;
}

.cache-gsc0y8-Input:read-only~.e1vf1uzt2 {
  background: #f9f9fa;
}

.cache-gsc0y8-Input:disabled {
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-gsc0y8-Input:disabled~.e1vf1uzt2 {
  background: #f3f3f4;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-gsc0y8-Input:placeholder-shown~.e1vf1uzt2 {
  color: #727683;
}

<form
    novalidate=""
  >
    <div
      class="cache-ymc80m-Stack efjor120"
    >
      <div>
        <div
          class="cache-snr60n-Container e1vf1uzt0"
          data-disabled="false"
          data-error="false"
          data-success="false"
          data-unit="false"
        >
          <div
            class="cache-1mc02x-Stack-SideContainer e1vf1uzt4"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="cache-1xcp86l-StyledGhostButton e1eauuw30"
              type="button"
            >
              <svg
                class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="e1vf1uzt3 cache-19zw6op-StyledRow-InputContainer eagug70"
          >
            <input
              class="cache-gsc0y8-Input e1vf1uzt1"
              data-has-unit="false"
              data-size="large"
              id=":r0:"
              max="9007199254740991"
              min="0"
              name="test"
              placeholder=""
              type="number"
              value=""
            />
          </div>
          <div
            class="cache-1mc02x-Stack-SideContainer e1vf1uzt4"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="cache-1xcp86l-StyledGhostButton e1eauuw30"
              type="button"
            >
              <svg
                class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputFieldV2 should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-snr60n-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-snr60n-Container:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-snr60n-Container[data-success='true'] {
  border-color: #22674e;
}

.cache-snr60n-Container[data-error='true'] {
  border-color: #b3144d;
}

.cache-snr60n-Container:hover {
  border-color: #792dd4;
}

.cache-snr60n-Container[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
  cursor: not-allowed;
}

.cache-snr60n-Container[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1mc02x-Stack-SideContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 2px 8px;
}

.cache-1mc02x-Stack-SideContainer[data-size='small'] {
  height: 30px;
}

.cache-1mc02x-Stack-SideContainer[data-size='medium'] {
  height: 38px;
}

.cache-1mc02x-Stack-SideContainer[data-size='large'] {
  height: 46px;
  padding: 4px 8px;
}

.cache-1lhf2jx-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
  color: #b5b7bd;
}

.cache-1lhf2jx-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-19zw6op-StyledRow-InputContainer {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-width: 0 1px 0 1px;
  border-style: solid;
  border-color: inherit;
  background: inherit;
  width: 100%;
}

.cache-gsc0y8-Input {
  outline: none;
  border: none;
  padding: 0;
  width: 100%;
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: Regular;
  line-height: 24px;
  text-align: center;
  padding: 8px;
  background: none;
}

.cache-gsc0y8-Input[data-has-unit='true'] {
  text-align: left;
  padding: 8px 0 8px 8px;
}

.cache-gsc0y8-Input::-webkit-outer-spin-button,
.cache-gsc0y8-Input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-gsc0y8-Input {
  -moz-appearance: textfield;
}

.cache-gsc0y8-Input[data-size='small'] {
  height: 30px;
}

.cache-gsc0y8-Input[data-size='medium'] {
  height: 38px;
}

.cache-gsc0y8-Input[data-size='large'] {
  height: 46px;
}

.cache-gsc0y8-Input:-moz-read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.cache-gsc0y8-Input:read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.cache-gsc0y8-Input:-moz-read-only~.e1vf1uzt2 {
  background: #f9f9fa;
}

.cache-gsc0y8-Input:read-only~.e1vf1uzt2 {
  background: #f9f9fa;
}

.cache-gsc0y8-Input:disabled {
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-gsc0y8-Input:disabled~.e1vf1uzt2 {
  background: #f3f3f4;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-gsc0y8-Input:placeholder-shown~.e1vf1uzt2 {
  color: #727683;
}

<form
    novalidate=""
  >
    <div
      class="cache-ymc80m-Stack efjor120"
    >
      <div>
        <div
          class="cache-snr60n-Container e1vf1uzt0"
          data-disabled="true"
          data-error="false"
          data-success="false"
          data-unit="false"
        >
          <div
            class="cache-1mc02x-Stack-SideContainer e1vf1uzt4"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="cache-1lhf2jx-StyledGhostButton e1eauuw30"
              disabled=""
              type="button"
            >
              <svg
                class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="e1vf1uzt3 cache-19zw6op-StyledRow-InputContainer eagug70"
          >
            <input
              aria-label="Number Input"
              class="cache-gsc0y8-Input e1vf1uzt1"
              data-has-unit="false"
              data-size="large"
              disabled=""
              id=":r4:"
              max="9007199254740991"
              min="0"
              name="test"
              placeholder=""
              type="number"
              value=""
            />
          </div>
          <div
            class="cache-1mc02x-Stack-SideContainer e1vf1uzt4"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="cache-1lhf2jx-StyledGhostButton e1eauuw30"
              disabled=""
              type="button"
            >
              <svg
                class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
